@@ -15,7 +15,6 @@
 package org.hyperledger.besu.ethereum.core;
 
 import static com.google.common.base.Preconditions.checkArgument;
-import static java.util.stream.Collectors.toUnmodifiableList;
 import static java.util.stream.Collectors.toUnmodifiableSet;
 import static org.hyperledger.besu.ethereum.core.InMemoryKeyValueStorageProvider.createInMemoryWorldStateArchive;
 
@@ -23,20 +22,21 @@ import org.hyperledger.besu.crypto.KeyPair;
 import org.hyperledger.besu.crypto.SecureRandomProvider;
 import org.hyperledger.besu.crypto.SignatureAlgorithm;
 import org.hyperledger.besu.crypto.SignatureAlgorithmFactory;
+import org.hyperledger.besu.datatypes.AccessListEntry;
 import org.hyperledger.besu.datatypes.Address;
 import org.hyperledger.besu.datatypes.Hash;
+import org.hyperledger.besu.datatypes.TransactionType;
+import org.hyperledger.besu.datatypes.VersionedHash;
 import org.hyperledger.besu.datatypes.Wei;
 import org.hyperledger.besu.ethereum.mainnet.BodyValidation;
 import org.hyperledger.besu.ethereum.mainnet.MainnetBlockHeaderFunctions;
 import org.hyperledger.besu.ethereum.worldstate.WorldStateArchive;
-import org.hyperledger.besu.evm.AccessListEntry;
 import org.hyperledger.besu.evm.account.Account;
 import org.hyperledger.besu.evm.account.MutableAccount;
 import org.hyperledger.besu.evm.log.Log;
 import org.hyperledger.besu.evm.log.LogTopic;
 import org.hyperledger.besu.evm.log.LogsBloomFilter;
 import org.hyperledger.besu.evm.worldstate.WorldUpdater;
-import org.hyperledger.besu.plugin.data.TransactionType;
 
 import java.math.BigInteger;
 import java.security.InvalidAlgorithmParameterException;
@@ -57,7 +57,6 @@ import java.util.OptionalLong;
 import java.util.Random;
 import java.util.Set;
 import java.util.function.Supplier;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 import org.apache.tuweni.bytes.Bytes;
@@ -140,7 +139,7 @@ public class BlockDataGenerator {
         // Mutate accounts
         accountsToSetup.forEach(
             hash -> {
-              final MutableAccount a = stateUpdater.getAccount(hash).getMutable();
+              final MutableAccount a = stateUpdater.getAccount(hash);
               a.incrementNonce();
               a.setBalance(Wei.of(positiveLong()));
               storageKeys.forEach(key -> a.setStorageValue(key, UInt256.ONE));
@@ -180,7 +179,7 @@ public class BlockDataGenerator {
     final WorldUpdater updater = worldState.updater();
     final List<Account> accounts = new ArrayList<>(count);
     for (int i = 0; i < count; i++) {
-      final MutableAccount account = updater.getOrCreate(address()).getMutable();
+      final MutableAccount account = updater.getOrCreate(address());
       if (random.nextFloat() < percentContractAccounts) {
         // Some percentage of accounts are contract accounts
         account.setCode(bytesValue(5, 50));
@@ -304,6 +303,7 @@ public class BlockDataGenerator {
             .mixHash(hash())
             .nonce(blockNonce)
             .withdrawalsRoot(options.getWithdrawalsRoot(null))
+            .depositsRoot(options.getDepositsRoot(null))
             .blockHeaderFunctions(
                 options.getBlockHeaderFunctions(new MainnetBlockHeaderFunctions()));
     options.getBaseFee(Optional.of(Wei.of(uint256(2)))).ifPresent(blockHeaderBuilder::baseFee);
@@ -329,7 +329,10 @@ public class BlockDataGenerator {
     }
 
     return new BlockBody(
-        options.getTransactions(defaultTxs), ommers, options.getWithdrawals(Optional.empty()));
+        options.getTransactions(defaultTxs),
+        ommers,
+        options.getWithdrawals(Optional.empty()),
+        options.getDeposits(Optional.empty()));
   }
 
   private BlockHeader ommer() {
@@ -368,21 +371,13 @@ public class BlockDataGenerator {
 
   public Transaction transaction(
       final TransactionType transactionType, final Bytes payload, final Address to) {
-    switch (transactionType) {
-      case FRONTIER:
-        return frontierTransaction(payload, to);
-      case EIP1559:
-        return eip1559Transaction(payload, to);
-      case ACCESS_LIST:
-        return accessListTransaction(payload, to);
-      case BLOB:
-        return blobTransaction(payload, to);
-      default:
-        throw new RuntimeException(
-            String.format(
-                "Developer Error. No random transaction generator defined for %s",
-                transactionType));
-    }
+    return switch (transactionType) {
+      case FRONTIER -> frontierTransaction(payload, to);
+      case EIP1559 -> eip1559Transaction(payload, to);
+      case ACCESS_LIST -> accessListTransaction(payload, to);
+      case BLOB -> blobTransaction(payload, to);
+        // no default, all types accounted for.
+    };
   }
 
   private Transaction accessListTransaction(final Bytes payload, final Address to) {
@@ -401,13 +396,12 @@ public class BlockDataGenerator {
 
   private List<AccessListEntry> accessList() {
     final List<Address> accessedAddresses =
-        Stream.generate(this::address).limit(1L + random.nextInt(3)).collect(toUnmodifiableList());
+        Stream.generate(this::address).limit(1L + random.nextInt(3)).toList();
     final List<AccessListEntry> accessedStorage = new ArrayList<>();
     for (int i = 0; i < accessedAddresses.size(); ++i) {
       accessedStorage.add(
           new AccessListEntry(
-              accessedAddresses.get(i),
-              Stream.generate(this::bytes32).limit(2L * i).collect(toUnmodifiableList())));
+              accessedAddresses.get(i), Stream.generate(this::bytes32).limit(2L * i).toList()));
     }
     return accessedStorage;
   }
@@ -437,8 +431,8 @@ public class BlockDataGenerator {
         .value(Wei.of(positiveLong()))
         .payload(payload)
         .chainId(BigInteger.ONE)
-        .maxFeePerDataGas(Wei.of(1))
-        .versionedHashes(List.of(Hash.fromHexStringLenient("0x29")))
+        .maxFeePerBlobGas(Wei.of(1))
+        .versionedHashes(List.of(VersionedHash.DEFAULT_VERSIONED_HASH))
         .signAndBuild(generateKeyPair());
   }
 
@@ -464,10 +458,7 @@ public class BlockDataGenerator {
 
   public Set<Transaction> transactions(final int n) {
     return transactions(
-        n,
-        new TransactionType[] {
-          TransactionType.FRONTIER, TransactionType.ACCESS_LIST, TransactionType.EIP1559
-        });
+        n, TransactionType.FRONTIER, TransactionType.ACCESS_LIST, TransactionType.EIP1559);
   }
 
   public Set<Transaction> transactionsWithAllTypes() {
@@ -478,10 +469,7 @@ public class BlockDataGenerator {
     checkArgument(atLeast >= 0);
     final HashSet<TransactionType> remainingTransactionTypes =
         new HashSet<>(
-            Set.of(
-                new TransactionType[] {
-                  TransactionType.FRONTIER, TransactionType.ACCESS_LIST, TransactionType.EIP1559
-                }));
+            Set.of(TransactionType.FRONTIER, TransactionType.ACCESS_LIST, TransactionType.EIP1559));
     final HashSet<Transaction> transactions = new HashSet<>();
     while (transactions.size() < atLeast || !remainingTransactionTypes.isEmpty()) {
       final Transaction newTransaction = transaction();
@@ -535,7 +523,7 @@ public class BlockDataGenerator {
   }
 
   public List<Log> logs(final int logsCount, final int topicsPerLog) {
-    return Stream.generate(() -> log(topicsPerLog)).limit(logsCount).collect(Collectors.toList());
+    return Stream.generate(() -> log(topicsPerLog)).limit(logsCount).toList();
   }
 
   public Log log() {
@@ -543,8 +531,7 @@ public class BlockDataGenerator {
   }
 
   public Log log(final int topicCount) {
-    final List<LogTopic> topics =
-        Stream.generate(this::logTopic).limit(topicCount).collect(Collectors.toList());
+    final List<LogTopic> topics = Stream.generate(this::logTopic).limit(topicCount).toList();
     return new Log(address(), bytesValue(5, 15), topics);
   }
 
@@ -651,6 +638,7 @@ public class BlockDataGenerator {
     private final List<BlockHeader> ommers = new ArrayList<>();
 
     private Optional<Optional<List<Withdrawal>>> withdrawals = Optional.empty();
+    private Optional<Optional<List<Deposit>>> deposits = Optional.empty();
     private Optional<Bytes> extraData = Optional.empty();
     private Optional<BlockHeaderFunctions> blockHeaderFunctions = Optional.empty();
     private Optional<Hash> receiptsRoot = Optional.empty();
@@ -666,8 +654,9 @@ public class BlockDataGenerator {
     private Optional<Optional<Wei>> maybeBaseFee = Optional.empty();
 
     private Optional<Hash> withdrawalsRoot = Optional.empty();
+    private Optional<Hash> depositsRoot = Optional.empty();
 
-    private Optional<Optional<Wei>> maybeMaxFeePerDataGas = Optional.empty();
+    private Optional<Optional<Wei>> maybeMaxFeePerBlobGas = Optional.empty();
 
     public static BlockOptions create() {
       return new BlockOptions();
@@ -734,6 +723,14 @@ public class BlockDataGenerator {
       return withdrawals.orElse(defaultValue);
     }
 
+    public Hash getDepositsRoot(final Hash defaultValue) {
+      return depositsRoot.orElse(defaultValue);
+    }
+
+    public Optional<List<Deposit>> getDeposits(final Optional<List<Deposit>> defaultValue) {
+      return deposits.orElse(defaultValue);
+    }
+
     public boolean hasTransactions() {
       return hasTransactions;
     }
@@ -758,6 +755,11 @@ public class BlockDataGenerator {
 
     public BlockOptions setWithdrawals(final Optional<List<Withdrawal>> withdrawals) {
       this.withdrawals = Optional.of(withdrawals);
+      return this;
+    }
+
+    public BlockOptions setDeposits(final Optional<List<Deposit>> deposits) {
+      this.deposits = Optional.of(deposits);
       return this;
     }
 
@@ -849,12 +851,17 @@ public class BlockDataGenerator {
       return this;
     }
 
-    public Optional<Wei> getMaxFeePerDataGas(final Optional<Wei> defaultValue) {
-      return maybeMaxFeePerDataGas.orElse(defaultValue);
+    public BlockOptions setDepositsRoot(final Hash depositsRoot) {
+      this.depositsRoot = Optional.of(depositsRoot);
+      return this;
     }
 
-    public BlockOptions setMaxFeePerDataGas(final Optional<Wei> maxFeePerDataGas) {
-      this.maybeMaxFeePerDataGas = Optional.of(maxFeePerDataGas);
+    public Optional<Wei> getMaxFeePerBlobGas(final Optional<Wei> defaultValue) {
+      return maybeMaxFeePerBlobGas.orElse(defaultValue);
+    }
+
+    public BlockOptions setMaxFeePerBlobGas(final Optional<Wei> maxFeePerBlobGas) {
+      this.maybeMaxFeePerBlobGas = Optional.of(maxFeePerBlobGas);
       return this;
     }
   }
