@@ -28,40 +28,45 @@ import org.hyperledger.besu.ethereum.core.Difficulty;
 import org.hyperledger.besu.ethereum.core.Transaction;
 import org.hyperledger.besu.ethereum.mainnet.MainnetBlockHeaderFunctions;
 import org.hyperledger.besu.ethereum.mainnet.ProtocolSpec;
-import org.hyperledger.besu.ethereum.vm.BlockHashLookup;
+import org.hyperledger.besu.ethereum.vm.CachingBlockHashLookup;
 import org.hyperledger.besu.evm.Code;
 import org.hyperledger.besu.evm.EVM;
+import org.hyperledger.besu.evm.EvmSpecVersion;
+import org.hyperledger.besu.evm.account.AccountStorageEntry;
 import org.hyperledger.besu.evm.code.CodeInvalid;
 import org.hyperledger.besu.evm.frame.MessageFrame;
 import org.hyperledger.besu.evm.log.LogsBloomFilter;
-import org.hyperledger.besu.evm.precompile.PrecompileContractRegistry;
-import org.hyperledger.besu.evm.processor.MessageCallProcessor;
 import org.hyperledger.besu.evm.tracing.OperationTracer;
 import org.hyperledger.besu.evm.tracing.StandardJsonTracer;
 import org.hyperledger.besu.evm.worldstate.WorldState;
-import org.hyperledger.besu.util.Log4j2ConfiguratorUtil;
+import org.hyperledger.besu.evm.worldstate.WorldUpdater;
+import org.hyperledger.besu.metrics.MetricsSystemModule;
+import org.hyperledger.besu.util.LogConfigurator;
 
 import java.io.BufferedWriter;
+import java.io.ByteArrayInputStream;
 import java.io.File;
 import java.io.IOException;
+import java.io.InputStream;
 import java.io.OutputStreamWriter;
 import java.io.PrintWriter;
 import java.time.Instant;
-import java.util.ArrayDeque;
+import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.Comparator;
 import java.util.Deque;
-import java.util.Optional;
+import java.util.LinkedHashMap;
+import java.util.List;
+import java.util.NavigableMap;
+import java.util.Set;
 import java.util.stream.Collectors;
 
 import com.google.common.base.Joiner;
 import com.google.common.base.Stopwatch;
 import io.vertx.core.json.JsonObject;
-import org.apache.logging.log4j.Level;
 import org.apache.tuweni.bytes.Bytes;
 import org.apache.tuweni.bytes.Bytes32;
 import org.apache.tuweni.units.bigints.UInt256;
-import org.slf4j.Logger;
-import org.slf4j.LoggerFactory;
 import picocli.CommandLine;
 import picocli.CommandLine.Command;
 import picocli.CommandLine.Option;
@@ -79,10 +84,15 @@ import picocli.CommandLine.Option;
     optionListHeading = "%nOptions:%n",
     footerHeading = "%n",
     footer = "Hyperledger Besu is licensed under the Apache License 2.0",
-    subcommands = {StateTestSubCommand.class, CodeValidateSubCommand.class})
+    subcommands = {
+      BenchmarkSubCommand.class,
+      B11rSubCommand.class,
+      CodeValidateSubCommand.class,
+      StateTestSubCommand.class,
+      T8nSubCommand.class,
+      T8nServerSubCommand.class
+    })
 public class EvmToolCommand implements Runnable {
-
-  private static final Logger LOG = LoggerFactory.getLogger(EvmToolCommand.class);
 
   @Option(
       names = {"--code"},
@@ -107,16 +117,34 @@ public class EvmToolCommand implements Runnable {
   private final Wei gasPriceGWei = Wei.ZERO;
 
   @Option(
+      names = {"--blob-price"},
+      description = "Price of blob gas for this invocation",
+      paramLabel = "<int>")
+  private final Wei blobGasPrice = Wei.ZERO;
+
+  @Option(
       names = {"--sender"},
       paramLabel = "<address>",
       description = "Calling address for this invocation.")
-  private final Address sender = Address.fromHexString("0x00");
+  private final Address sender = Address.ZERO;
 
   @Option(
       names = {"--receiver"},
       paramLabel = "<address>",
       description = "Receiving address for this invocation.")
-  private final Address receiver = Address.fromHexString("0x00");
+  private final Address receiver = Address.ZERO;
+
+  @Option(
+      names = {"--contract"},
+      paramLabel = "<address>",
+      description = "The address holding the contract code.")
+  private final Address contract = Address.ZERO;
+
+  @Option(
+      names = {"--coinbase"},
+      paramLabel = "<address>",
+      description = "Coinbase for this invocation.")
+  private final Address coinbase = Address.ZERO;
 
   @Option(
       names = {"--input"},
@@ -131,7 +159,7 @@ public class EvmToolCommand implements Runnable {
   private final Wei ethValue = Wei.ZERO;
 
   @Option(
-      names = {"--json"},
+      names = {"--json", "--trace"},
       description = "Trace each opcode as a json object.",
       scope = INHERIT)
   final Boolean showJsonResults = false;
@@ -143,10 +171,42 @@ public class EvmToolCommand implements Runnable {
   final Boolean showJsonAlloc = false;
 
   @Option(
-      names = {"--nomemory"},
-      description = "Disable showing the full memory output for each op.",
-      scope = INHERIT)
-  final Boolean noMemory = false;
+      names = {"--memory", "--trace.memory"},
+      description =
+          "Show the full memory output in tracing for each op. Default is not to show memory.",
+      scope = INHERIT,
+      negatable = true)
+  final Boolean showMemory = false;
+
+  @Option(
+      names = {"--trace.nostack"},
+      description = "Show the operand stack in tracing for each op. Default is to show stack.",
+      scope = INHERIT,
+      negatable = true)
+  final Boolean hideStack = false;
+
+  @Option(
+      names = {"--trace.returndata"},
+      description =
+          "Show the return data in tracing for each op when present. Default is to show return data.",
+      scope = INHERIT,
+      negatable = true)
+  final Boolean showReturnData = false;
+
+  @Option(
+      names = {"--trace.storage"},
+      description =
+          "Show the updated storage slots for the current account. Default is to not show updated storage.",
+      scope = INHERIT,
+      negatable = true)
+  final Boolean showStorage = false;
+
+  @Option(
+      names = {"--notime"},
+      description = "Don't include time data in summary output.",
+      scope = INHERIT,
+      negatable = true)
+  final Boolean noTime = false;
 
   @Option(
       names = {"--prestate", "--genesis"},
@@ -163,15 +223,41 @@ public class EvmToolCommand implements Runnable {
       description = "Number of times to repeat for benchmarking.")
   private final Integer repeat = 0;
 
+  @Option(
+      names = {"-v", "--version"},
+      versionHelp = true,
+      description = "display version info")
+  boolean versionInfoRequested;
+
   static final Joiner STORAGE_JOINER = Joiner.on(",\n");
   private final EvmToolCommandOptionsModule daggerOptions = new EvmToolCommandOptionsModule();
-  private PrintWriter out =
-      new PrintWriter(new BufferedWriter(new OutputStreamWriter(System.out, UTF_8)), true);
+  PrintWriter out;
+  InputStream in;
 
-  void parse(final CommandLine.IExecutionStrategy resultHandler, final String[] args) {
+  public EvmToolCommand() {
+    this(
+        new ByteArrayInputStream(new byte[0]),
+        new PrintWriter(new BufferedWriter(new OutputStreamWriter(System.out, UTF_8)), true));
+  }
 
-    final CommandLine commandLine = new CommandLine(this);
-    out = commandLine.getOut();
+  public EvmToolCommand(final InputStream in, final PrintWriter out) {
+    this.in = in;
+    this.out = out;
+  }
+
+  void execute(final String... args) {
+    execute(System.in, new PrintWriter(System.out, true, UTF_8), args);
+  }
+
+  void execute(final InputStream input, final PrintWriter output, final String[] args) {
+    final CommandLine commandLine = new CommandLine(this).setOut(output);
+    out = output;
+    in = input;
+
+    // don't require exact case to match enum values
+    commandLine.setCaseInsensitiveEnumValuesAllowed(true);
+
+    // add dagger-injected options
     commandLine.addMixin("Dagger Options", daggerOptions);
 
     // add sub commands here
@@ -179,11 +265,53 @@ public class EvmToolCommand implements Runnable {
     commandLine.registerConverter(Bytes.class, Bytes::fromHexString);
     commandLine.registerConverter(Wei.class, arg -> Wei.of(Long.parseUnsignedLong(arg)));
 
-    commandLine.setExecutionStrategy(resultHandler).execute(args);
+    // change negation regexp so --nomemory works.  See
+    // https://picocli.info/#_customizing_negatable_options
+    commandLine.setNegatableOptionTransformer(
+        new CommandLine.RegexTransformer.Builder()
+            .addPattern("^--no(\\w(-|\\w)*)$", "--$1", "--[no]$1")
+            .addPattern("^--trace.no(\\w(-|\\w)*)$", "--trace.$1", "--trace.[no]$1")
+            .addPattern("^--(\\w(-|\\w)*)$", "--no$1", "--[no]$1")
+            .addPattern("^--trace.(\\w(-|\\w)*)$", "--trace.no$1", "--trace.[no]$1")
+            .build());
+
+    // Enumerate forks to support execution-spec-tests
+    addForkHelp(commandLine.getSubcommands().get("t8n"));
+    addForkHelp(commandLine.getSubcommands().get("t8n-server"));
+
+    commandLine.setExecutionStrategy(new CommandLine.RunLast());
+    commandLine.execute(args);
+  }
+
+  private static void addForkHelp(final CommandLine subCommandLine) {
+    subCommandLine
+        .getHelpSectionMap()
+        .put("forks_header", help -> help.createHeading("%nKnown Forks:%n"));
+    subCommandLine
+        .getHelpSectionMap()
+        .put(
+            "forks",
+            help ->
+                help.createTextTable(
+                        Arrays.stream(EvmSpecVersion.values())
+                            .collect(
+                                Collectors.toMap(
+                                    EvmSpecVersion::getName,
+                                    EvmSpecVersion::getDescription,
+                                    (a, b) -> b,
+                                    LinkedHashMap::new)))
+                    .toString());
+    List<String> keys = new ArrayList<>(subCommandLine.getHelpSectionKeys());
+    int index = keys.indexOf(CommandLine.Model.UsageMessageSpec.SECTION_KEY_FOOTER_HEADING);
+    keys.add(index, "forks_header");
+    keys.add(index + 1, "forks");
+
+    subCommandLine.setHelpSectionKeys(keys);
   }
 
   @Override
   public void run() {
+    LogConfigurator.setLevel("", "OFF");
     try {
       final EvmToolComponent component =
           DaggerEvmToolComponent.builder()
@@ -201,7 +329,7 @@ public class EvmToolCommand implements Runnable {
       final BlockHeader blockHeader =
           BlockHeaderBuilder.create()
               .parentHash(Hash.EMPTY)
-              .coinbase(Address.ZERO)
+              .coinbase(coinbase)
               .difficulty(Difficulty.ONE)
               .number(1)
               .gasLimit(5000)
@@ -218,26 +346,19 @@ public class EvmToolCommand implements Runnable {
               .blockHeaderFunctions(new MainnetBlockHeaderFunctions())
               .buildBlockHeader();
 
-      Log4j2ConfiguratorUtil.setAllLevels("", repeat == 0 ? Level.INFO : Level.OFF);
       int remainingIters = this.repeat;
-      Log4j2ConfiguratorUtil.setLevel(
-          "org.hyperledger.besu.ethereum.mainnet.AbstractProtocolScheduleBuilder", Level.OFF);
       final ProtocolSpec protocolSpec =
           component.getProtocolSpec().apply(BlockHeaderBuilder.createDefault().buildBlockHeader());
-      Log4j2ConfiguratorUtil.setLevel(
-          "org.hyperledger.besu.ethereum.mainnet.AbstractProtocolScheduleBuilder", null);
       final Transaction tx =
-          new Transaction(
-              0,
-              Wei.ZERO,
-              Long.MAX_VALUE,
-              Optional.ofNullable(receiver),
-              Wei.ZERO,
-              null,
-              callData,
-              sender,
-              Optional.empty(),
-              Optional.empty());
+          new Transaction.Builder()
+              .nonce(0)
+              .gasPrice(Wei.ZERO)
+              .gasLimit(Long.MAX_VALUE)
+              .to(receiver)
+              .value(Wei.ZERO)
+              .payload(callData)
+              .sender(sender)
+              .build();
 
       final long intrinsicGasCost =
           protocolSpec
@@ -249,9 +370,10 @@ public class EvmToolCommand implements Runnable {
               .orElse(0L);
       long txGas = gas - intrinsicGasCost - accessListCost;
 
-      final PrecompileContractRegistry precompileContractRegistry =
-          protocolSpec.getPrecompileContractRegistry();
       final EVM evm = protocolSpec.getEvm();
+      if (codeBytes.isEmpty()) {
+        codeBytes = component.getWorldState().get(receiver).getCode();
+      }
       Code code = evm.getCode(Hash.hash(codeBytes), codeBytes);
       if (!code.isValid()) {
         out.println(((CodeInvalid) code).getInvalidReason());
@@ -264,66 +386,73 @@ public class EvmToolCommand implements Runnable {
 
         final OperationTracer tracer = // You should have picked Mercy.
             lastLoop && showJsonResults
-                ? new StandardJsonTracer(System.out, !noMemory)
+                ? new StandardJsonTracer(out, showMemory, !hideStack, showReturnData, showStorage)
                 : OperationTracer.NO_TRACING;
 
-        var updater = component.getWorldUpdater();
+        WorldUpdater updater = component.getWorldUpdater();
         updater.getOrCreate(sender);
         updater.getOrCreate(receiver);
+        var contractAccount = updater.getOrCreate(contract);
+        contractAccount.setCode(codeBytes);
 
-        final Deque<MessageFrame> messageFrameStack = new ArrayDeque<>();
-        messageFrameStack.add(
+        MessageFrame initialMessageFrame =
             MessageFrame.builder()
                 .type(MessageFrame.Type.MESSAGE_CALL)
-                .messageFrameStack(messageFrameStack)
-                .worldUpdater(updater)
+                .worldUpdater(updater.updater())
                 .initialGas(txGas)
                 .contract(Address.ZERO)
                 .address(receiver)
                 .originator(sender)
                 .sender(sender)
                 .gasPrice(gasPriceGWei)
+                .blobGasPrice(blobGasPrice)
                 .inputData(callData)
                 .value(ethValue)
                 .apparentValue(ethValue)
                 .code(code)
                 .blockValues(blockHeader)
-                .depth(0)
                 .completer(c -> {})
                 .miningBeneficiary(blockHeader.getCoinbase())
-                .blockHashLookup(new BlockHashLookup(blockHeader, component.getBlockchain()))
-                .build());
+                .blockHashLookup(new CachingBlockHashLookup(blockHeader, component.getBlockchain()))
+                .accessListWarmAddresses(
+                    EvmSpecVersion.SHANGHAI.compareTo(evm.getEvmVersion()) <= 0
+                        ? Set.of(coinbase)
+                        : Set.of())
+                .build();
+        Deque<MessageFrame> messageFrameStack = initialMessageFrame.getMessageFrameStack();
 
-        final MessageCallProcessor mcp = new MessageCallProcessor(evm, precompileContractRegistry);
         stopwatch.start();
         while (!messageFrameStack.isEmpty()) {
           final MessageFrame messageFrame = messageFrameStack.peek();
-          mcp.process(messageFrame, tracer);
-          if (lastLoop) {
-            if (messageFrame.getExceptionalHaltReason().isPresent()) {
-              out.println(messageFrame.getExceptionalHaltReason().get());
-            }
-            if (messageFrame.getRevertReason().isPresent()) {
-              out.println(new String(messageFrame.getRevertReason().get().toArray(), UTF_8));
-            }
-          }
+          protocolSpec.getTransactionProcessor().process(messageFrame, tracer);
           if (messageFrameStack.isEmpty()) {
             stopwatch.stop();
             if (lastTime == 0) {
               lastTime = stopwatch.elapsed().toNanos();
             }
+            if (lastLoop) {
+              if (messageFrame.getExceptionalHaltReason().isPresent()) {
+                out.println(messageFrame.getExceptionalHaltReason().get());
+              }
+              if (messageFrame.getRevertReason().isPresent()) {
+                out.println(
+                    new String(messageFrame.getRevertReason().get().toArrayUnsafe(), UTF_8));
+              }
+            }
           }
 
           if (lastLoop && messageFrameStack.isEmpty()) {
             final long evmGas = txGas - messageFrame.getRemainingGas();
+            final JsonObject resultLine = new JsonObject();
+            resultLine.put("gasUser", "0x" + Long.toHexString(evmGas));
+            if (!noTime) {
+              resultLine.put("timens", lastTime).put("time", lastTime / 1000);
+            }
+            resultLine
+                .put("gasTotal", "0x" + Long.toHexString(evmGas))
+                .put("output", messageFrame.getOutputData().toHexString());
             out.println();
-            out.println(
-                new JsonObject()
-                    .put("gasUser", "0x" + Long.toHexString(evmGas))
-                    .put("timens", lastTime)
-                    .put("time", lastTime / 1000)
-                    .put("gasTotal", "0x" + Long.toHexString(evmGas))
-                    .put("output", messageFrame.getOutputData().toHexString()));
+            out.println(resultLine);
           }
         }
         lastTime = stopwatch.elapsed().toNanos();
@@ -336,7 +465,8 @@ public class EvmToolCommand implements Runnable {
       } while (remainingIters-- > 0);
 
     } catch (final IOException e) {
-      LOG.error("Unable to create Genesis module", e);
+      System.err.println("Unable to create Genesis module");
+      e.printStackTrace(System.out);
     }
   }
 
@@ -349,10 +479,11 @@ public class EvmToolCommand implements Runnable {
             account -> {
               out.println(
                   " \"" + account.getAddress().map(Address::toHexString).orElse("-") + "\": {");
-              if (account.getCode() != null && account.getCode().size() > 0) {
+              if (account.getCode() != null && !account.getCode().isEmpty()) {
                 out.println("  \"code\": \"" + account.getCode().toHexString() + "\",");
               }
-              var storageEntries = account.storageEntriesFrom(Bytes32.ZERO, Integer.MAX_VALUE);
+              NavigableMap<Bytes32, AccountStorageEntry> storageEntries =
+                  account.storageEntriesFrom(Bytes32.ZERO, Integer.MAX_VALUE);
               if (!storageEntries.isEmpty()) {
                 out.println("  \"storage\": {");
                 out.println(
@@ -363,12 +494,12 @@ public class EvmToolCommand implements Runnable {
                                     "   \""
                                         + accountStorageEntry
                                             .getKey()
-                                            .map(UInt256::toHexString)
+                                            .map(UInt256::toQuantityHexString)
                                             .orElse("-")
                                         + "\": \""
-                                        + accountStorageEntry.getValue().toHexString()
+                                        + accountStorageEntry.getValue().toQuantityHexString()
                                         + "\"")
-                            .collect(Collectors.toList())));
+                            .toList()));
                 out.println("  },");
               }
               out.print("  \"balance\": \"" + account.getBalance().toShortHexString() + "\"");
